--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,22 @@
 *.lai
 *.la
 *.a
+*~
+*.autosave
+
+*.core
+*.moc
+*.obj
+*.orig
+*.rej
+.#*
+*.*#
+moc_*.cpp
+ui_*.h
+qrc_*.cpp
+Thumbs.db
+Makefile*
+*.pro.user*
+bin/*
+bind/*
+build/*
